Renaming a bunch of things

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,11 +1,11 @@
 ---
-nodeSelectors:
+nodeChaos:
   enabled: true
   fields:
     - spec.unschedulable!=true
   labels:
   interval: 5m
-podSelectors:
+podChaos:
   enabled: true
   fields:
     - metadata.namespace=default
@@ -19,7 +19,7 @@ monitoring:
   defaultIngressUrl: https://www.avsatum.com:443/
   ingressProtocol: https
   ingressPort: 443
-  serviceSelectors:
+  serviceMonitoring:
     enabled: true
     interval: 2s
     fields:
@@ -28,7 +28,7 @@ monitoring:
       - metadata.namespace!=docker
     labels:
       - app=my-nginx
-  ingressSelectors:
+  ingressMonitoring:
     enabled: false
     interval: 2s
     fields:
