--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,21 +26,21 @@
 
 
 [[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.3.0"
+
+[[constraint]]
   name = "gopkg.in/yaml.v2"
-  version = "2.2.1"
+  version = "2.2.2"
 
 [[constraint]]
   branch = "master"
-  name = "k8s.io/apimachinery"
+  name = "k8s.io/api"
 
 [[constraint]]
   name = "k8s.io/client-go"
-  version = "9.0.0"
+  version = "12.0.0"
 
 [prune]
   go-tests = true
   unused-packages = true
-
-[[constraint]]
-  name = "github.com/stretchr/testify"
-  version = "1.2.2"
